<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@id/card_parent_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="5.0dip" >

        <LinearLayout
            android:id="@+id/main_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:padding="0.0dip" >

                <TextView
                    android:id="@id/textView_first"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_weight="0.85"
                    android:background="@drawable/ripple"
                    android:text="Profile"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@id/profile_help"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:background="@drawable/ripple"
                    android:onClick="first_panel_help"
                    android:text="!"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5.0dip" >

                <TextView
                    android:id="@id/textView20"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1.0"
                    android:text="@string/label_age"
                    android:textAppearance="?android:textAppearanceMedium" />

                <EditText
                    android:id="@id/profile_ui_age"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.0"
                    android:ems="10"
                    android:inputType="number"
                    android:selectAllOnFocus="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5.0dip" >

                <TextView
                    android:id="@id/textView22"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1.0"
                    android:text="@string/profile_sex_text"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.0"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@id/profile_ui_male_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:checked="false"
                        android:text="Male"
                        android:textColor="#ff4d4d4d" />

                    <RadioButton
                        android:id="@id/profile_ui_female_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:checked="false"
                        android:text="Female"
                        android:textColor="#ff4d4d4d" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@id/profile_height_ftin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:measureWithLargestChild="false"
                android:orientation="horizontal"
                android:padding="5.0dip" >

                <TextView
                    android:id="@id/textView23"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1.0"
                    android:text="@string/profile_height_text"
                    android:textAppearance="?android:textAppearanceMedium" />

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.0"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@id/profile_ui_height_ft"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:ems="10"
                        android:inputType="number" />

                    <TextView
                        android:id="@id/textView24"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight="1.0"
                        android:paddingLeft="2.0dip"
                        android:text="ft"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <EditText
                        android:id="@id/profile_ui_height_inch"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:ems="10"
                        android:inputType="number" />

                    <TextView
                        android:id="@id/textView24"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight="1.0"
                        android:paddingLeft="2.0dip"
                        android:text="@string/profile_ft_text"
                        android:textAppearance="?android:textAppearanceMedium" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5.0dip" >

                <TextView
                    android:id="@id/textView28"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1.0"
                    android:text="@string/profile_weight_label"
                    android:textAppearance="?android:textAppearanceMedium" />

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.0"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@id/profile_ui_weight"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="80.0"
                        android:ems="10"
                        android:inputType="number" />

                    <TextView
                        android:id="@id/profile_weight_label"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight="20.0"
                        android:paddingLeft="2.0dip"
                        android:text="@string/profile_kg_text"
                        android:textAppearance="?android:textAppearanceMedium" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5.0dip" >

                <TextView
                    android:id="@id/textView30"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1.0"
                    android:text="@string/profile_activity_label"
                    android:textAppearance="?android:textAppearanceMedium" />

                <Spinner
                    android:id="@id/spinnerprofile_ui_activity"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="2.0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@id/bmi_result"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="50.0dip"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="0.0dip" >

        <Button
            android:id="@id/bmi_cal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple"
            android:onClick="bmi_calculation"
            android:padding="10.0dip"
            android:text="Done"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>